# DeathStarBench

socialNetwork/: docker-compose.yml  social_network.thrift
socialNetwork/config/: service-config.json
socialNetwork/gen-cpp/: MediaService.cpp  SocialGraphStorageService.cpp  SocialGraphStorageService.h  SocialGraphStorageService_server.skeleton.cpp  UrlShortenService.cpp  UserMentionService.cpp
socialNetwork/gen-lua/: social_network_MediaService.lua  social_network_SocialGraphStorageService.lua  social_network_UrlShortenService.lua  social_network_UserMentionService.lua
socialNetwork/gen-py/social_network/: MediaService.py  SocialGraphStorageService-remote  SocialGraphStorageService.py  UrlShortenService.py  UserMentionService.py  __init__.py
socialNetwork/src/: CMakeLists.txt
socialNetwork/src/SocialGraphService/: CMakeLists.txt  SocialGraphHandler.h  SocialGraphService.cpp
socialNetwork/src/SocialGraphStorageService/: CMakeLists.txt  SocialGraphStorageHandler.h  SocialGraphStorageService.cpp
socialNetwork/src/UserService/: UserHandler.h
socialNetwork/test/: TestSocialGraphStorageService.py
